--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -75,7 +75,7 @@ jobs:
         run: |
           set -x
           lxc delete -q -f ncp || true
-          lxc image import -q "./${{ needs.build.outputs.artifact_name }}" --alias "ncp/test"
+          lxc image import -q "./${{ needs.build.outputs.artifact_file }}" --alias "ncp/test"
           systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/test" ncp
           lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
