publish-image.yml: Make it clear in the job output if we're doing a dry-run

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -55,7 +55,10 @@ jobs:
           echo "Artifact Checksum: 
             $checksum"
           
-          [[ "${{ inputs.dry_run }}" == "true" ]] &&  exit 0
+          [[ "${{ inputs.dry_run }}" == "true" ]] && {
+            echo "Dry run only. Skipping release..."
+            exit 0
+          }
           
           title="$(hub release show -f "%t" "${VERSION}")
           body="$(hub release show -f "%b" "${VERSION}")"
