--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -299,6 +299,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+      - name: Debug output
+        run: |
+          echo "do release?: ${{ inputs.release }}"
+          echo "event name: ${{ github.event_name }}"
+          echo "ref type: ${{ github.ref_type }}"
+          echo "protected?: ${{ github.ref_protected }}"
       - name: Create Draft
         if: ${{ (inputs.release || github.event_name != 'workflow_dispatch') && github.ref_type == 'tag' && github.ref_protected }}
         env:
