nc-format-USB: Prevent users from breaking their system if datadir is on USB

--- a/etc/ncp-config.d/nc-format-USB.cfg
+++ b/etc/ncp-config.d/nc-format-USB.cfg
@@ -11,6 +11,13 @@
       "name": "Label",
       "value": "myCloudDrive",
       "suggest": "myCloudDrive"
+    },
+    {
+      "id": "ALLOW_DATADIR_REMOVAL",
+      "name": "Allow removal of data directory (MAY BREAK YOUR SYSTEM)",
+      "type": "bool",
+      "value": "no",
+      "suggest": "no"
     }
   ]
 }
