--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -61,7 +61,6 @@ jobs:
             exit 0
           }
           
-          title="$(hub release show -f "%t" "${VERSION}")"
           body="$(hub release show -f "%b" "${VERSION}")"
           if ! [[ "$body" =~ .*'**Checksums:**'.* ]]
           then
@@ -76,4 +75,5 @@ jobs:
           body="${body%$'\n\`\`\`'*}
           $checksum
           \`\`\`"
-          hub release edit -a "${IMG?}" -m "${title?}" -m "$body" "${VERSION?}"
+          gh release upload "${VERSION?}" "${asset}"
+          gh release edit "${VERSION?}" -n "$body"
