nc-format-USB.sh: Fix check for data directory on USB

--- a/etc/ncp-config.d/nc-format-USB.cfg
+++ b/etc/ncp-config.d/nc-format-USB.cfg
@@ -14,7 +14,7 @@
     },
     {
       "id": "ALLOW_DATADIR_REMOVAL",
-      "name": "Allow removal of data directory (MAY BREAK YOUR SYSTEM)",
+      "name": "Remove data dir (MAY BREAK YOUR SYSTEM)",
       "type": "bool",
       "value": "no",
       "suggest": "no"
