vm-tests.yml: Disable for push:master

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -12,6 +12,10 @@ on:
         type: string
   push:
     branches:
+      - devel
+  pull_request:
+    branches:
+      - devel
       - master
 
 jobs:
