--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -13,6 +13,9 @@ on:
         description: git ref, branch or tag to test against
         required: false
         type: string
+  push:
+    branches:
+      - master
 
 jobs:
   setup-installation-test-instance:
