build-lxd.yml: Add update test

--- a/.github/workflows/lxd-trigger.yml
+++ b/.github/workflows/lxd-trigger.yml
@@ -1,7 +1,12 @@
+name: LXD Tests
+
 on:
   pull_request:
     branches:
       - master
+      - devel
+  push:
+    branches:
       - devel
 
 jobs:
