build-xml.yml: Fix PR ref format
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -146,7 +146,7 @@ jobs:
           set -ex
           BRANCH="${VERSION/refs\/heads\//}"
           BRANCH="${VERSION/refs\/tags\//}"
-          if [[ "$BRANCH" =~ "/refs/pull/"* ]]
+          if [[ "$BRANCH" =~ "refs/pull/"* ]]
           then
             UPDATE_ARGS=("${{ github.base_ref }}" "$VERSION") 
           else
