build-docker.yml: Enable on PR to devel if coming from same repository
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -17,9 +17,11 @@ on:
   pull_request:
     branches:
       - master
+      - devel
 
 jobs:
   build:
+    if: ${{ github.repository == 'nextcloud/nextcloudpi' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
