build-lxd.yml: Fix discovery of previous tag when running on tag
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -79,7 +79,10 @@ jobs:
           then
             version="master"
           else
-            git fetch -fu --tags origin ${{ env.VERSION }}:${{ env.VERSION }}
+            if [[ "${{ github.ref_type }}" != "tag ]] || ! git describe --tags > /dev/null
+            then
+              git fetch -fu --tags origin ${{ env.VERSION }}:${{ env.VERSION }}
+            fi
             version="$(git describe --tags)"
             [[ "$version" =~ .*-.*-.* ]] || {
               git checkout HEAD~1
