build-lxd.yml: Fix missing quote
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -79,7 +79,7 @@ jobs:
           then
             version="master"
           else
-            if [[ "${{ github.ref_type }}" != "tag ]] || ! git describe --tags > /dev/null
+            if [[ "${{ github.ref_type }}" != "tag" ]] || ! git describe --tags > /dev/null
             then
               git fetch -fu --tags origin ${{ env.VERSION }}:${{ env.VERSION }}
             fi
