--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -75,6 +75,12 @@ jobs:
           mv "${artifacts[0]}" "output/$IMG"
           echo "::set-output name=artifact_file::${IMG}"
           echo "ARTIFACT_FILE=${IMG}" >> $GITHUB_ENV
+      - name: "Upload Armbian logs"
+        if: ${{ inputs.board_id != 'raspberrypi' && steps.build-armbian-2nd.outcome == 'failure' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.run_id }}-${{ inputs.board_id }}-logs
+          path: armbian/output
       - name: Build RPI SD Image
         if: ${{ inputs.board_id == 'raspberrypi' }}
         id: build-rpi
