--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -163,6 +163,7 @@ jobs:
           echo "Running update ${{ needs.build-previous.outputs.previous_version }} -> ${VERSION}"
           latest_nc_version="$(cat etc/ncp.cfg | jq -r '.nextcloud_version')"
           lxc exec ncp -- bash -c "DBG=x ncp-update ${UPDATE_ARGS[*]}"
+          lxc exec ncp -- /usr/local/bin/ncc status
           lxc exec ncp -- bash -c "DBG=x ncp-update-nc ${latest_nc_version?}"
           lxc stop ncp
       - name: Pack LXD image
